Initial commit for 1.5C filtered portfolio coverage

--- a/examples/Simple_portfolio_coverage.ipynb
+++ b/examples/Simple_portfolio_coverage.ipynb
@@ -99,7 +99,6 @@
     "\n",
     "#Use your local file instead\n",
     "#my_file_path = \"path/to/your/portfolio_file.csv\"\n",
-
     "#my_file_path = \"//SBTi-finance-tool/examples/data/example_portfolio.csv\"\n",
     "#df_portfolio = pd.read_csv(my_file_path, encoding=\"utf-8\")"
    ]
@@ -239,7 +238,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Use the enhanced SBTi class for consistent format handling\n",
+    "# Use the SBTi class for consistent format handling\n",
     "from SBTi.data.sbti import SBTi\n",
     "\n",
     "print(\"Loading SBTi Companies Taking Action data...\")\n",
@@ -279,8 +278,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# The SBTi class has already processed and filtered the data\n",
-    "# Just work with the pre-processed targets\n",
     "targets = cta_file.copy()\n",
     "\n",
     "# Filter for companies that have \"Target\" in the action field  \n",
@@ -342,8 +339,31 @@
    "id": "39f77799",
    "metadata": {},
    "source": [
-    "## Filter out dates\n",
-    "Now filter out rows according to the provided date"
+    "## Filter out dates\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0693fca3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# List of potential date columns to look for\n",
+    "potential_date_cols = ['date_updated', 'Date Updated', 'date_published', 'Date Published']\n",
+    "\n",
+    "found_date_col = None\n",
+    "for col in potential_date_cols:\n",
+    "    if col in companies_with_targets.columns:\n",
+    "        found_date_col = col\n",
+    "        break\n",
+    "\n",
+    "# If ther is a mistmatch mismatch, rename it to what the tool expects\n",
+    "if found_date_col and found_date_col != sbti_provider.c.COL_DATE_PUBLISHED:\n",
+    "    print(f\"Renaming column '{found_date_col}' to '{sbti_provider.c.COL_DATE_PUBLISHED}' for compatibility.\")\n",
+    "    companies_with_targets.rename(columns={found_date_col: sbti_provider.c.COL_DATE_PUBLISHED}, inplace=True)\n",
+    "elif not found_date_col:\n",
+    "    print(\"WARNING: No date column found. Date filtering may fail.\")"
    ]
   },
   {
@@ -408,6 +428,54 @@
     "df_portfolio['validated'] = df_portfolio.apply(is_validated, axis=1)\n",
     "\n",
     "print(f\"Validation completed using ISIN column: {portfolio_isin_col}, LEI column: {portfolio_lei_col}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6b838de2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Identify target classification column and filter for 1.5°C\n",
+    "target_class_col = 'Target Classification'\n",
+    "if target_class_col not in filtered_df.columns:\n",
+    "    # Fallback to find column if name varies\n",
+    "    cols = [c for c in filtered_df.columns if 'classification' in c.lower()]\n",
+    "    target_class_col = cols[0] if cols else None\n",
+    "\n",
+    "if target_class_col:\n",
+    "    # Filter for companies with \"1.5\" in their classification\n",
+    "    df_1_5c = filtered_df[filtered_df[target_class_col].astype(str).str.contains(\"1.5\", na=False)]\n",
+    "    \n",
+    "    # Create lookup sets\n",
+    "    isin_set_1_5c = set(df_1_5c[sbti_provider.c.COL_COMPANY_ISIN].dropna())\n",
+    "    lei_set_1_5c = set(df_1_5c[sbti_provider.c.COL_COMPANY_LEI].dropna())\n",
+    "    company_name_set_1_5c = set(df_1_5c[sbti_provider.c.COL_COMPANY_NAME].str.lower().dropna())\n",
+    "    \n",
+    "    print(f\"Found {len(df_1_5c)} companies with 1.5°C aligned targets.\")\n",
+    "else:\n",
+    "    print(\"Warning: Target Classification column not found.\")\n",
+    "    isin_set_1_5c, lei_set_1_5c, company_name_set_1_5c = set(), set(), set()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f1d2ba7a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def is_1_5c_aligned(row):\n",
+    "    if portfolio_lei_col and pd.notna(row.get(portfolio_lei_col)) and row.get(portfolio_lei_col) in lei_set_1_5c:\n",
+    "        return True\n",
+    "    if portfolio_isin_col and pd.notna(row.get(portfolio_isin_col)) and row.get(portfolio_isin_col) in isin_set_1_5c:\n",
+    "        return True\n",
+    "    if pd.notna(row.get('company_name')) and row.get('company_name').lower() in company_name_set_1_5c:\n",
+    "        return True\n",
+    "    return False\n",
+    "\n",
+    "df_portfolio['is_1_5c'] = df_portfolio.apply(is_1_5c_aligned, axis=1)"
    ]
   },
   {
@@ -495,6 +563,50 @@
     "#Show the first few validated companies\n",
     "print(\"\\nSample of companies with validated targets:\")\n",
     "print(df_portfolio[df_portfolio[\"validated\"] == True][[\"company_name\", \"investment_value\", \"validated\"]].head(10))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d26bd056",
+   "metadata": {},
+   "source": [
+    "## 1.5°C Portfolio Coverage\n",
+    "The following calculates the percentage of the portfolio invested in companies with specific 1.5°C aligned targets."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b39755ab",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Calculate weighted coverage specifically for 1.5°C targets\n",
+    "try:\n",
+    "    # Use the 'is_1_5c' flag created earlier to weight the investment\n",
+    "    pc_weighted_1_5c = df_portfolio.apply(\n",
+    "        lambda row: (row['investment_value'] * row['is_1_5c']) / total_investment_weight,\n",
+    "        axis=1,\n",
+    "    )\n",
+    "    pc_result_1_5c = round(pc_weighted_1_5c.sum(), 4)\n",
+    "except ZeroDivisionError:\n",
+    "    pc_result_1_5c = 0\n",
+    "\n",
+    "# Calculate absolute investment value for 1.5°C\n",
+    "val_1_5c_sum = df_portfolio.loc[df_portfolio[\"is_1_5c\"] == True, \"investment_value\"].sum()\n",
+    "count_1_5c = df_portfolio['is_1_5c'].sum()\n",
+    "\n",
+    "print(\"-\" * 30)\n",
+    "print(\"1.5°C AMBITION ANALYSIS\")\n",
+    "print(\"-\" * 30)\n",
+    "print(f\"1.5°C Portfolio Coverage:       {pc_result_1_5c*100:.2f}%\")\n",
+    "print(f\"Investment in 1.5°C Targets:    {val_1_5c_sum:,.2f}\")\n",
+    "print(f\"Number of 1.5°C Companies:      {count_1_5c}\")\n",
+    "\n",
+    "# Compare against total validated targets if available\n",
+    "if 'pc_result' in locals() and pc_result > 0:\n",
+    "    share_of_validated = (pc_result_1_5c / pc_result) * 100\n",
+    "    print(f\"Share of Validated Targets:     {share_of_validated:.1f}% (are 1.5°C aligned)\")"
    ]
   },
   {
