Pydantic Versioning Control
Pydantic versioning specified as syntax changes >v2. Added isin/lei column converter for input files with mismatched names based on current data guidance.

--- a/examples/2_quick_temp_score_calculation.ipynb
+++ b/examples/2_quick_temp_score_calculation.ipynb
@@ -150,6 +150,12 @@
    "outputs": [],
    "source": [
     "portfolio = pd.read_csv(\"data/example_portfolio.csv\", encoding=\"iso-8859-1\")"
+    "\n",
+    "# Rename columns if needed to match expected format\n",
+    "if 'isin' in portfolio.columns and 'company_isin' not in portfolio.columns:\n",
+    "    portfolio = portfolio.rename(columns={'isin': 'company_isin'})\n",
+    "if 'lei' in portfolio.columns and 'company_lei' not in portfolio.columns:\n",
+    "    portfolio = portfolio.rename(columns={'lei': 'company_lei'})"
    ]
   },
   {
