Update file paths in portfolio coverage example to address comments

--- a/examples/Simple_portfolio_coverage.ipynb
+++ b/examples/Simple_portfolio_coverage.ipynb
@@ -99,8 +99,8 @@
     "\n",
     "#Use your local file instead\n",
     "#my_file_path = \"path/to/your/portfolio_file.csv\"\n",
-    "#df_portfolio = pd.read_csv(my_file_path, encoding=\"utf-8\")\n",
-    "#df_portfolio = pd.read_excel(\"C:/path/to/your/portfolio_file.xlsx\", engine=\"openpyxl\")"
+    "#my_file_path = \"//SBTi-finance-tool/examples/data/example_portfolio.csv\"\n",
+    "#df_portfolio = pd.read_csv(my_file_path, encoding=\"utf-8\")"
    ]
   },
   {
