Fix notebook 2 invalid JSON and restore missing data file for notebook 4b
- Add missing comma in 2_quick_temp_score_calculation.ipynb cell source
  array (line 155) that made the notebook unparseable
- Restore example_data_provider_TS.xlsx removed in anonymization commit,
  required by 4b_portfolio_agg_readymade_TS.ipynb

--- a/examples/2_quick_temp_score_calculation.ipynb
+++ b/examples/2_quick_temp_score_calculation.ipynb
@@ -152,7 +152,7 @@
    },
    "outputs": [],
    "source": [
-    "portfolio = pd.read_csv(\"data/example_portfolio.csv\", encoding=\"iso-8859-1\")"
+    "portfolio = pd.read_csv(\"data/example_portfolio.csv\", encoding=\"iso-8859-1\")",
     "\n",
     "# Rename columns if needed to match expected format\n",
     "if 'isin' in portfolio.columns and 'company_isin' not in portfolio.columns:\n",
